versions/v3.6.0/doxygen/html/globals_func_t.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_func_t.html
original_path: doxygen/html/globals_func_t.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions with links to the files they belong to:

### - t -

- task\_wdt\_add() : [task\_wdt.h](group__task__wdt__api.md#ga26484bd148a9e2910d9989a1d9598230)
- task\_wdt\_delete() : [task\_wdt.h](group__task__wdt__api.md#ga631c1243b5a00a304687cc54e2632c0d)
- task\_wdt\_feed() : [task\_wdt.h](group__task__wdt__api.md#ga00fc594cace06d6308efa1ded45a22fc)
- task\_wdt\_init() : [task\_wdt.h](group__task__wdt__api.md#gafa31c31c13478669615ebf0bbdd28a0c)
- TC\_RESULT\_TO\_STR() : [tc\_util.h](tc__util_8h.md#a9e2302e8d62cfefe7df86e62489efe29)
- tcpc\_clear\_status\_register() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga00170b754d78d8eb7da24abd7d533e42)
- tcpc\_dump\_std\_reg() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga91eef7084b523f1991e000f0592b8cbd)
- tcpc\_get\_cc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga66ab7a9f3cd1b80cd5bc8e99040c5627)
- tcpc\_get\_chip\_info() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga894d24140f8675b4f48d759c27f52076)
- tcpc\_get\_rp\_value() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga25a110be90977e768623f3a0c9a222d5)
- tcpc\_get\_rx\_pending\_msg() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga34e4caefb0f660b170f97956ac57b707)
- tcpc\_get\_snk\_ctrl() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga0c1cd7bc86c89abf5e348987d34e4623)
- tcpc\_get\_src\_ctrl() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga03c8c6fc6f4c6adefacbc809588e1f85)
- tcpc\_get\_status\_register() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga41e81b8f83e06934a5eb984ae6f980ec)
- tcpc\_init() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gabc50daa9cc713b1d0e340007e3850ca8)
- tcpc\_is\_cc\_at\_least\_one\_rd() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gab4e9cc812679cf8cb0189f73a28d7cd2)
- tcpc\_is\_cc\_audio\_acc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga153054be89d5f21148fe3ee750c718ee)
- tcpc\_is\_cc\_only\_one\_rd() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga91c3c40ea82ce5a081918183d8b76c06)
- tcpc\_is\_cc\_open() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga0db896e395812603a03548b8faac6791)
- tcpc\_is\_cc\_rp() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga6dfd68915ffe093058f6187b770a2436)
- tcpc\_is\_cc\_snk\_dbg\_acc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaa0d2059c3a53df986150141f73b9a98a)
- tcpc\_is\_cc\_src\_dbg\_acc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga03849a7a4fd7f468b18838c443d1ecd8)
- tcpc\_mask\_status\_register() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga0d1868d555e99877e062fb7135d9db8f)
- tcpc\_select\_rp\_value() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga3958eac0cc0b9b2ac782e0cdb235036c)
- tcpc\_set\_alert\_handler\_cb() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga75f0dc246dac576f14c5ac51b45fd489)
- tcpc\_set\_bist\_test\_mode() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaccc728a1f27c59a163a5c0a221ab7c18)
- tcpc\_set\_cc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gac5737d02caa2b9e649b469bcd648440f)
- tcpc\_set\_cc\_polarity() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga53f0207ecb63011c6dfc3c298a841ed4)
- tcpc\_set\_debug\_accessory() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga01687aa218b25ba137e994a2a55bce23)
- tcpc\_set\_debug\_detach() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaaa38e56e6bc8c41e936d8ed70aaa8a23)
- tcpc\_set\_drp\_toggle() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaa06e156bef46ff3f70cc8c302ddf0a4d)
- tcpc\_set\_low\_power\_mode() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga961a4dc393d58dc44ea19a62c943ed48)
- tcpc\_set\_roles() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga8d30c961335f62faa33aa7d842422da0)
- tcpc\_set\_rx\_enable() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga905176a77ff127f4df8f6a4f2c61a1b7)
- tcpc\_set\_vconn() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga247f0ea91249753d6f5eefe006617e41)
- tcpc\_set\_vconn\_cb() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaa608f2c6627c4a9c3039f0ec1b238bbc)
- tcpc\_set\_vconn\_discharge\_cb() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga975e7edea79de197c7230bd7b7a7efba)
- tcpc\_sop\_prime\_enable() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gab0f1f5d47c1e2b8ee9eb3d7875a0051e)
- tcpc\_transmit\_data() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga8bf8fd202d582a4cc179a0fc4aff35e1)
- tcpc\_vconn\_discharge() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga3937d66636a2b22422caf11c48f7628a)
- test\_main() : [ztest.h](ztest_8h.md#a8a4533f287d99bb2d7c24c0e29c9a449)
- tftp\_get() : [tftp.h](group__tftp__client.md#ga067de19b4089fbd2c2e49e925b73cfb0)
- tftp\_put() : [tftp.h](group__tftp__client.md#ga692f6a51f2ecd5c3d673ff64f59294b9)
- tgpio\_pin\_config\_ext\_timestamp() : [timeaware\_gpio.h](group__tgpio__interface.md#ga4c35c5941848a1b060366e6ccb9e655e)
- tgpio\_pin\_disable() : [timeaware\_gpio.h](group__tgpio__interface.md#ga724d1410e73eba65c5d343b534424879)
- tgpio\_pin\_periodic\_output() : [timeaware\_gpio.h](group__tgpio__interface.md#gaec3b6161e701b9f2124470da9c202301)
- tgpio\_pin\_read\_ts\_ec() : [timeaware\_gpio.h](group__tgpio__interface.md#ga2f351d5d09b1f5bc7d71bce18979a0c2)
- tgpio\_port\_get\_cycles\_per\_second() : [timeaware\_gpio.h](group__tgpio__interface.md#gaccc8c2ed61ffabed71d5a410f10992da)
- tgpio\_port\_get\_time() : [timeaware\_gpio.h](group__tgpio__interface.md#gaa40a3fef2a4e4e1326a25cc832ff2fb3)
- thread\_analyzer\_print() : [thread\_analyzer.h](group__thread__analyzer.md#ga9ff07e2eff100f4b8c79440483c89836)
- thread\_analyzer\_run() : [thread\_analyzer.h](group__thread__analyzer.md#ga21ae4723422fb96bf4f20ddb3cc1bb8d)
- time() : [time.h](lib_2libc_2minimal_2include_2time_8h.md#a99ef1cb2c789827dd5db3886dccf9067)
- TIME\_STAMP\_DELTA\_GET() : [timestamp.h](timestamp_8h.md#abb03327df49c0544f863a239a9af0086)
- timer\_create() : [time.h](include_2zephyr_2posix_2time_8h.md#ab36f0d44be3c22bae387064f49ab934c)
- timer\_delete() : [time.h](include_2zephyr_2posix_2time_8h.md#ad114bb350d7d5d12cff3fd19bf533303)
- timer\_getoverrun() : [time.h](include_2zephyr_2posix_2time_8h.md#ad779f0bc22f64bd3bd977221b0ce1b8f)
- timer\_gettime() : [time.h](include_2zephyr_2posix_2time_8h.md#a06dda57adfdeb4a9b346f69c95cba96a)
- timer\_settime() : [time.h](include_2zephyr_2posix_2time_8h.md#a32207b51f2effa8441f4c728fd8519c0)
- timeutil\_sync\_estimate\_skew() : [timeutil.h](group__timeutil__sync__apis.md#gac4c25a1ed054a8a06c87d4df9c25ffc6)
- timeutil\_sync\_local\_from\_ref() : [timeutil.h](group__timeutil__sync__apis.md#gad8ef92e5dc72bd26d765567134044400)
- timeutil\_sync\_ref\_from\_local() : [timeutil.h](group__timeutil__sync__apis.md#ga75361d2bfd219f1e8107d635eb4ecc16)
- timeutil\_sync\_skew\_to\_ppb() : [timeutil.h](group__timeutil__sync__apis.md#gabe374cf629ee64b850cc49e954666d8d)
- timeutil\_sync\_state\_set\_skew() : [timeutil.h](group__timeutil__sync__apis.md#ga01142931b299e848b0642634a0922be5)
- timeutil\_sync\_state\_update() : [timeutil.h](group__timeutil__sync__apis.md#gaa6926a23d1c4fbb61584e957d157bd62)
- timeutil\_timegm64() : [timeutil.h](group__timeutil__repr__apis.md#gac4d2957df896a77eb317e10318adf481)
- timing\_counter\_get() : [timing.h](group__timing__api.md#gaa5736c87362de09749af1d8ff30b8208)
- timing\_cycles\_get() : [timing.h](group__timing__api.md#gaa12074c7645b19578e7ca573c6aa2955)
- timing\_cycles\_to\_ns() : [timing.h](group__timing__api.md#ga14a85981068350f33c63c93c4b71afe2)
- timing\_cycles\_to\_ns\_avg() : [timing.h](group__timing__api.md#ga28b0252f3395b6e6b549cb03ea4dbef4)
- timing\_freq\_get() : [timing.h](group__timing__api.md#gab72ed08d19630cb4cbea4977f2e6723b)
- timing\_freq\_get\_mhz() : [timing.h](group__timing__api.md#ga65370ad32eadf61c84b90dc04ecd1d56)
- timing\_init() : [timing.h](group__timing__api.md#ga50ff9040b99d95c56f494014831e4b47)
- timing\_start() : [timing.h](group__timing__api.md#ga3c28bb4ced0467c284d33c800e070bde)
- timing\_stop() : [timing.h](group__timing__api.md#gade1584bf683c9c61905513efa4d99cf2)
- tlc5971\_set\_global\_brightness() : [tlc5971.h](tlc5971_8h.md#acc0ab1f6ae658de98d043e49291abea4)
- tls\_credential\_add() : [tls\_credentials.h](group__tls__credentials.md#ga640ff6dd3eb4d5017feaab6fab2bb2f7)
- tls\_credential\_delete() : [tls\_credentials.h](group__tls__credentials.md#ga9d8b47a7a2675fb3b3c6ee346e925aca)
- tls\_credential\_get() : [tls\_credentials.h](group__tls__credentials.md#gac3ac4ca887faf6c1f2ae60c6a08f8795)
- tmp116\_eeprom\_read() : [tmp116.h](tmp116_8h.md#abfc6372f2d640f921b237fe14f18b73b)
- tmp116\_eeprom\_write() : [tmp116.h](tmp116_8h.md#ab740cbdd946d5df162621f2309822810)
- tolower() : [ctype.h](ctype_8h.md#ab5088a2e14096e665c030d72508e2e9d)
- toupper() : [ctype.h](ctype_8h.md#abfe63aca83a67be16cf7b8636260b018)
- tracing\_format\_data() : [tracing\_format.h](group__subsys__tracing__format__apis.md#ga4072def87e770f60de40062617e96256)
- tracing\_format\_raw\_data() : [tracing\_format.h](group__subsys__tracing__format__apis.md#gadb864c39916bc50bad341964fead14f5)
- tracing\_format\_string() : [tracing\_format.h](group__subsys__tracing__format__apis.md#gaf372e7223a7be6f938cd6a0263815d44)
- tty\_init() : [tty.h](console_2tty_8h.md#a5a880bb61f0bdb0f37c501acc0408d32)
- tty\_read() : [tty.h](console_2tty_8h.md#a90ec3fbbe5f0fad19361d23e821c960c)
- tty\_set\_rx\_buf() : [tty.h](console_2tty_8h.md#ad05b854f19b3bd97e2635bc8ebc07ce2)
- tty\_set\_rx\_timeout() : [tty.h](console_2tty_8h.md#a109fd8ee6b581a796d67025a0e33abde)
- tty\_set\_tx\_buf() : [tty.h](console_2tty_8h.md#af6383a47f82797af9a45bc81d84de1be)
- tty\_set\_tx\_timeout() : [tty.h](console_2tty_8h.md#a1c19c6ed8207ae711e047f9ae446e399)
- tty\_write() : [tty.h](console_2tty_8h.md#af60d8a57ac3cb81a0a003a011a0f31e5)
- TYPE\_SECTION\_END\_EXTERN() : [log\_core.h](include_2zephyr_2logging_2log__core_8h.md#a9c76801a0e4d03e64c025f7cd5695d77)
- TYPE\_SECTION\_START\_EXTERN() : [log\_core.h](include_2zephyr_2logging_2log__core_8h.md#a8bddbf82fcd014a2b65b53d80312237d)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
