versions/v4.2.0/doxygen/html/globals_func_t.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/globals_func_t.html
original_path: doxygen/html/globals_func_t.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions with links to the files they belong to:

### - t -

- task\_wdt\_add() : [task\_wdt.h](group__task__wdt__api.md#ga26484bd148a9e2910d9989a1d9598230)
- task\_wdt\_delete() : [task\_wdt.h](group__task__wdt__api.md#ga631c1243b5a00a304687cc54e2632c0d)
- task\_wdt\_feed() : [task\_wdt.h](group__task__wdt__api.md#ga00fc594cace06d6308efa1ded45a22fc)
- task\_wdt\_init() : [task\_wdt.h](group__task__wdt__api.md#gafa31c31c13478669615ebf0bbdd28a0c)
- task\_wdt\_resume() : [task\_wdt.h](group__task__wdt__api.md#ga9beef1872ae55d7ab65295a70058c394)
- task\_wdt\_suspend() : [task\_wdt.h](group__task__wdt__api.md#ga53647130091f938ab22227e5ffd3649d)
- TC\_RESULT\_TO\_STR() : [tc\_util.h](tc__util_8h.md#a9e2302e8d62cfefe7df86e62489efe29)
- tcpc\_clear\_status\_register() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga00170b754d78d8eb7da24abd7d533e42)
- tcpc\_dump\_std\_reg() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga91eef7084b523f1991e000f0592b8cbd)
- tcpc\_get\_cc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga66ab7a9f3cd1b80cd5bc8e99040c5627)
- tcpc\_get\_chip\_info() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga894d24140f8675b4f48d759c27f52076)
- tcpc\_get\_rp\_value() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga25a110be90977e768623f3a0c9a222d5)
- tcpc\_get\_rx\_pending\_msg() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga34e4caefb0f660b170f97956ac57b707)
- tcpc\_get\_snk\_ctrl() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga0c1cd7bc86c89abf5e348987d34e4623)
- tcpc\_get\_src\_ctrl() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga03c8c6fc6f4c6adefacbc809588e1f85)
- tcpc\_get\_status\_register() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gace43dc303d3874a386cc79aa4304b846)
- tcpc\_init() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gabc50daa9cc713b1d0e340007e3850ca8)
- tcpc\_is\_cc\_at\_least\_one\_rd() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gab4e9cc812679cf8cb0189f73a28d7cd2)
- tcpc\_is\_cc\_audio\_acc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga153054be89d5f21148fe3ee750c718ee)
- tcpc\_is\_cc\_only\_one\_rd() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga91c3c40ea82ce5a081918183d8b76c06)
- tcpc\_is\_cc\_open() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga0db896e395812603a03548b8faac6791)
- tcpc\_is\_cc\_rp() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga6dfd68915ffe093058f6187b770a2436)
- tcpc\_is\_cc\_snk\_dbg\_acc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaa0d2059c3a53df986150141f73b9a98a)
- tcpc\_is\_cc\_src\_dbg\_acc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga03849a7a4fd7f468b18838c443d1ecd8)
- tcpc\_mask\_status\_register() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga0d1868d555e99877e062fb7135d9db8f)
- tcpc\_select\_rp\_value() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga3958eac0cc0b9b2ac782e0cdb235036c)
- tcpc\_set\_alert\_handler\_cb() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga75f0dc246dac576f14c5ac51b45fd489)
- tcpc\_set\_bist\_test\_mode() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaccc728a1f27c59a163a5c0a221ab7c18)
- tcpc\_set\_cc() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gac5737d02caa2b9e649b469bcd648440f)
- tcpc\_set\_cc\_polarity() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga53f0207ecb63011c6dfc3c298a841ed4)
- tcpc\_set\_debug\_accessory() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga01687aa218b25ba137e994a2a55bce23)
- tcpc\_set\_debug\_detach() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaaa38e56e6bc8c41e936d8ed70aaa8a23)
- tcpc\_set\_drp\_toggle() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaa06e156bef46ff3f70cc8c302ddf0a4d)
- tcpc\_set\_low\_power\_mode() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga961a4dc393d58dc44ea19a62c943ed48)
- tcpc\_set\_roles() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga8d30c961335f62faa33aa7d842422da0)
- tcpc\_set\_rx\_enable() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga905176a77ff127f4df8f6a4f2c61a1b7)
- tcpc\_set\_snk\_ctrl() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga7a63d55cbe5de1d89aa76e10df0140ed)
- tcpc\_set\_src\_ctrl() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga8f06b257d1bd0a17eb3042d204b2e6cd)
- tcpc\_set\_vconn() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga247f0ea91249753d6f5eefe006617e41)
- tcpc\_set\_vconn\_cb() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gaa608f2c6627c4a9c3039f0ec1b238bbc)
- tcpc\_set\_vconn\_discharge\_cb() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga975e7edea79de197c7230bd7b7a7efba)
- tcpc\_sop\_prime\_enable() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#gab0f1f5d47c1e2b8ee9eb3d7875a0051e)
- tcpc\_transmit\_data() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga8bf8fd202d582a4cc179a0fc4aff35e1)
- tcpc\_vconn\_discharge() : [usbc\_tcpc.h](group__usb__type__c__port__controller__api.md#ga3937d66636a2b22422caf11c48f7628a)
- tcpci\_alert\_reg\_to\_enum() : [tcpci\_priv.h](tcpci__priv_8h.md#abafd9380a335483525d8ff5b2b9e2306)
- tcpci\_read\_reg16() : [tcpci\_priv.h](tcpci__priv_8h.md#a00557a03647d6bd1ecba157ffff40e46)
- tcpci\_read\_reg8() : [tcpci\_priv.h](tcpci__priv_8h.md#aaad4be0dbc4c31e9d3438b7f8a3e8433)
- tcpci\_tcpm\_clear\_status\_register() : [tcpci\_priv.h](tcpci__priv_8h.md#aef29ca84b4cc68a55b840e987ec87f28)
- tcpci\_tcpm\_dump\_std\_reg() : [tcpci\_priv.h](tcpci__priv_8h.md#a005a5b7130913ba80ff21d89f6d0c8a7)
- tcpci\_tcpm\_get\_cc() : [tcpci\_priv.h](tcpci__priv_8h.md#ade1aa43041be0cc1abcf074b8e4e07e9)
- tcpci\_tcpm\_get\_chip\_info() : [tcpci\_priv.h](tcpci__priv_8h.md#a49a2f453d03c75aaea608a17a85a6c6f)
- tcpci\_tcpm\_get\_rp\_value() : [tcpci\_priv.h](tcpci__priv_8h.md#a2233ff710864ba8ec40f7792e6baf002)
- tcpci\_tcpm\_get\_snk\_ctrl() : [tcpci\_priv.h](tcpci__priv_8h.md#a338bd0bfb0df0fa3e4004dce85a7336b)
- tcpci\_tcpm\_get\_src\_ctrl() : [tcpci\_priv.h](tcpci__priv_8h.md#a9be63be44b19198cd8d49f95e971ee6d)
- tcpci\_tcpm\_get\_status\_register() : [tcpci\_priv.h](tcpci__priv_8h.md#a4568c479db7a136e15b35289126e7109)
- tcpci\_tcpm\_mask\_status\_register() : [tcpci\_priv.h](tcpci__priv_8h.md#aadbf2ef0350b8c54c4da53b7ab79f7d6)
- tcpci\_tcpm\_select\_rp\_value() : [tcpci\_priv.h](tcpci__priv_8h.md#ae2a60d3000187f640331816edbbcbcb6)
- tcpci\_tcpm\_set\_bist\_test\_mode() : [tcpci\_priv.h](tcpci__priv_8h.md#add2b2c0859e4ab1cf2f0e290e1d71d19)
- tcpci\_tcpm\_set\_cc() : [tcpci\_priv.h](tcpci__priv_8h.md#a56b77c066ecd306d98a9e8e7ca249dc6)
- tcpci\_tcpm\_set\_cc\_polarity() : [tcpci\_priv.h](tcpci__priv_8h.md#a87aec00974ff403a0e60b1ee1346ec73)
- tcpci\_tcpm\_set\_debug\_accessory() : [tcpci\_priv.h](tcpci__priv_8h.md#a269a35fb98ec53dba41fa53c78683ae2)
- tcpci\_tcpm\_set\_drp\_toggle() : [tcpci\_priv.h](tcpci__priv_8h.md#a3da565a529db5a6d337cf7f8642be8ab)
- tcpci\_tcpm\_set\_low\_power\_mode() : [tcpci\_priv.h](tcpci__priv_8h.md#aa86dd25de3d91ac61abc06f0c734046f)
- tcpci\_tcpm\_set\_roles() : [tcpci\_priv.h](tcpci__priv_8h.md#a0b0efcd606bdd19925ebaaaed017e5f9)
- tcpci\_tcpm\_set\_rx\_type() : [tcpci\_priv.h](tcpci__priv_8h.md#a0223089c1ab73b1ec8c5a2e9de9b2932)
- tcpci\_tcpm\_set\_snk\_ctrl() : [tcpci\_priv.h](tcpci__priv_8h.md#ac6848fa7e70af270d4471309589100f4)
- tcpci\_tcpm\_set\_src\_ctrl() : [tcpci\_priv.h](tcpci__priv_8h.md#aadac3408a1aea5e56c2578f3843c032a)
- tcpci\_tcpm\_set\_vconn() : [tcpci\_priv.h](tcpci__priv_8h.md#ac37957893c769d805d997a93198827a7)
- tcpci\_tcpm\_transmit\_data() : [tcpci\_priv.h](tcpci__priv_8h.md#a8ac9f08daf0f50749e9df389d1c8d41f)
- tcpci\_update\_reg8() : [tcpci\_priv.h](tcpci__priv_8h.md#a2f4e5571a7f272dd968dc002d70ef3f4)
- tcpci\_write\_reg16() : [tcpci\_priv.h](tcpci__priv_8h.md#a7db13212d494bcc8c98190f8670fcd34)
- tcpci\_write\_reg8() : [tcpci\_priv.h](tcpci__priv_8h.md#abbe63527659134a5bc14d6ecefabb0af)
- tee\_add\_shm() : [tee.h](group__tee__interface.md#gade7fdbece8b0bd47f5d148572016c4ef)
- tee\_cancel() : [tee.h](group__tee__interface.md#ga34fbbfe48a07541041ffddb9e318332a)
- tee\_close\_session() : [tee.h](group__tee__interface.md#gacb1d58002378a11d92361a149d451241)
- tee\_get\_version() : [tee.h](group__tee__interface.md#gadaaec6b6ea29d81f36943bbe5bcb305e)
- tee\_invoke\_func() : [tee.h](group__tee__interface.md#gae1337f293febcecc7dbc79ac064e7824)
- tee\_open\_session() : [tee.h](group__tee__interface.md#gad7c66e32d5b02c42c698bd422cf43523)
- tee\_rm\_shm() : [tee.h](group__tee__interface.md#gaf53521a3e3a36a9827753716bef1434f)
- tee\_shm\_alloc() : [tee.h](group__tee__interface.md#ga47f7403e2b136f755432159c7bd679a5)
- tee\_shm\_free() : [tee.h](group__tee__interface.md#ga346d8d67a18542c097f1254c0ace8726)
- tee\_shm\_register() : [tee.h](group__tee__interface.md#ga1565c23104792203ede9d9cb388ff782)
- tee\_shm\_unregister() : [tee.h](group__tee__interface.md#gade2c0e7d89e3594707637b62a1901bac)
- tee\_suppl\_recv() : [tee.h](group__tee__interface.md#ga2213f63da1f080beaedc169e13531a37)
- tee\_suppl\_send() : [tee.h](group__tee__interface.md#ga93cccfa446983be704f364760bf7567b)
- test\_main() : [ztest.h](ztest_8h.md#a8a4533f287d99bb2d7c24c0e29c9a449)
- tftp\_get() : [tftp.h](group__tftp__client.md#ga067de19b4089fbd2c2e49e925b73cfb0)
- tftp\_put() : [tftp.h](group__tftp__client.md#ga692f6a51f2ecd5c3d673ff64f59294b9)
- tgpio\_pin\_config\_ext\_timestamp() : [timeaware\_gpio.h](group__tgpio__interface.md#ga4c35c5941848a1b060366e6ccb9e655e)
- tgpio\_pin\_disable() : [timeaware\_gpio.h](group__tgpio__interface.md#ga724d1410e73eba65c5d343b534424879)
- tgpio\_pin\_periodic\_output() : [timeaware\_gpio.h](group__tgpio__interface.md#gaec3b6161e701b9f2124470da9c202301)
- tgpio\_pin\_read\_ts\_ec() : [timeaware\_gpio.h](group__tgpio__interface.md#ga2f351d5d09b1f5bc7d71bce18979a0c2)
- tgpio\_port\_get\_cycles\_per\_second() : [timeaware\_gpio.h](group__tgpio__interface.md#gaccc8c2ed61ffabed71d5a410f10992da)
- tgpio\_port\_get\_time() : [timeaware\_gpio.h](group__tgpio__interface.md#gaa40a3fef2a4e4e1326a25cc832ff2fb3)
- thread\_analyzer\_print() : [thread\_analyzer.h](group__thread__analyzer.md#ga4b7e9fb25842e55d7072c271b54e2769)
- thread\_analyzer\_run() : [thread\_analyzer.h](group__thread__analyzer.md#gad95f59d773da7db0ffa16b06b155f655)
- time() : [time.h](lib_2libc_2minimal_2include_2time_8h.md#a99ef1cb2c789827dd5db3886dccf9067)
- TIME\_STAMP\_DELTA\_GET() : [timestamp.h](timestamp_8h.md#abb03327df49c0544f863a239a9af0086)
- timer\_create() : [time.h](include_2zephyr_2posix_2time_8h.md#ab36f0d44be3c22bae387064f49ab934c)
- timer\_delete() : [time.h](include_2zephyr_2posix_2time_8h.md#ad114bb350d7d5d12cff3fd19bf533303)
- timer\_getoverrun() : [time.h](include_2zephyr_2posix_2time_8h.md#ad779f0bc22f64bd3bd977221b0ce1b8f)
- timer\_gettime() : [time.h](include_2zephyr_2posix_2time_8h.md#a06dda57adfdeb4a9b346f69c95cba96a)
- timer\_settime() : [time.h](include_2zephyr_2posix_2time_8h.md#a32207b51f2effa8441f4c728fd8519c0)
- timespec\_add() : [timeutil.h](group__timeutil__timespec__apis.md#ga81026756e417d086b4f53306d04c8d10)
- timespec\_compare() : [timeutil.h](group__timeutil__timespec__apis.md#gafa281a298f8b2f011875bb00094260fc)
- timespec\_equal() : [timeutil.h](group__timeutil__timespec__apis.md#gaedc15d71f9eee8e243c070a3e07d919f)
- timespec\_from\_timeout() : [timeutil.h](group__timeutil__repr__apis.md#gab9b5ccdfd7abeaf7a05ebf273cb4d022)
- timespec\_is\_valid() : [timeutil.h](group__timeutil__timespec__apis.md#ga2426889e703021e8b6f8a0ccab885bb6)
- timespec\_negate() : [timeutil.h](group__timeutil__timespec__apis.md#ga38216267ef6ca24e2b05d77104f5837a)
- timespec\_normalize() : [timeutil.h](group__timeutil__timespec__apis.md#ga4a0d4891eb6aef6543b1992566729f6c)
- timespec\_sub() : [timeutil.h](group__timeutil__timespec__apis.md#gae0511602aea1fecc0b204e28ae91e7d0)
- timespec\_to\_timeout() : [timeutil.h](group__timeutil__repr__apis.md#gac4262e7e4ebc2af52d21a18744d50169)
- timeutil\_sync\_estimate\_skew() : [timeutil.h](group__timeutil__sync__apis.md#gac4c25a1ed054a8a06c87d4df9c25ffc6)
- timeutil\_sync\_local\_from\_ref() : [timeutil.h](group__timeutil__sync__apis.md#gad8ef92e5dc72bd26d765567134044400)
- timeutil\_sync\_ref\_from\_local() : [timeutil.h](group__timeutil__sync__apis.md#ga75361d2bfd219f1e8107d635eb4ecc16)
- timeutil\_sync\_skew\_to\_ppb() : [timeutil.h](group__timeutil__sync__apis.md#gabe374cf629ee64b850cc49e954666d8d)
- timeutil\_sync\_state\_set\_skew() : [timeutil.h](group__timeutil__sync__apis.md#ga01142931b299e848b0642634a0922be5)
- timeutil\_sync\_state\_update() : [timeutil.h](group__timeutil__sync__apis.md#gaa6926a23d1c4fbb61584e957d157bd62)
- timeutil\_timegm64() : [timeutil.h](group__timeutil__repr__apis.md#gac4d2957df896a77eb317e10318adf481)
- timing\_counter\_get() : [timing.h](group__timing__api.md#gaa5736c87362de09749af1d8ff30b8208)
- timing\_cycles\_get() : [timing.h](group__timing__api.md#gaa12074c7645b19578e7ca573c6aa2955)
- timing\_cycles\_to\_ns() : [timing.h](group__timing__api.md#ga14a85981068350f33c63c93c4b71afe2)
- timing\_cycles\_to\_ns\_avg() : [timing.h](group__timing__api.md#ga28b0252f3395b6e6b549cb03ea4dbef4)
- timing\_freq\_get() : [timing.h](group__timing__api.md#gab72ed08d19630cb4cbea4977f2e6723b)
- timing\_freq\_get\_mhz() : [timing.h](group__timing__api.md#ga65370ad32eadf61c84b90dc04ecd1d56)
- timing\_init() : [timing.h](group__timing__api.md#ga50ff9040b99d95c56f494014831e4b47)
- timing\_start() : [timing.h](group__timing__api.md#ga3c28bb4ced0467c284d33c800e070bde)
- timing\_stop() : [timing.h](group__timing__api.md#gade1584bf683c9c61905513efa4d99cf2)
- tisci\_cmd\_change\_fwl\_owner() : [tisci.h](tisci_8h.md#afe30856eaa98b6f30b11ab99daf1dc91)
- tisci\_cmd\_clk\_get\_freq() : [tisci.h](tisci_8h.md#a5c69f5f12b79a0b37a1f704624106960)
- tisci\_cmd\_clk\_get\_match\_freq() : [tisci.h](tisci_8h.md#a9801b388e5dc60f10aa624040cb8bfe2)
- tisci\_cmd\_clk\_get\_num\_parents() : [tisci.h](tisci_8h.md#ae93fb7c70a4f2299415a51b993d36741)
- tisci\_cmd\_clk\_get\_parent() : [tisci.h](tisci_8h.md#a86e0ed2c8711363dc5ea710b12a303af)
- tisci\_cmd\_clk\_is\_auto() : [tisci.h](tisci_8h.md#aaebb0012c291ded1b9303d634b1bb245)
- tisci\_cmd\_clk\_is\_off() : [tisci.h](tisci_8h.md#a20276a83e2037db6895085770353a194)
- tisci\_cmd\_clk\_is\_on() : [tisci.h](tisci_8h.md#a7f0bafa6005d46d2786db590a27add25)
- tisci\_cmd\_clk\_set\_freq() : [tisci.h](tisci_8h.md#ad3563b7ec2fa13eb4b1faa564062ae12)
- tisci\_cmd\_clk\_set\_parent() : [tisci.h](tisci_8h.md#a6ad9804cf3e23246955bcab1e98aecdb)
- tisci\_cmd\_dev\_get\_clcnt() : [tisci.h](tisci_8h.md#a01393f21cb5a88388ce51e36ba1843fc)
- tisci\_cmd\_dev\_is\_idle() : [tisci.h](tisci_8h.md#af9ff6eee5bca675c50c28fbc4af3048c)
- tisci\_cmd\_dev\_is\_on() : [tisci.h](tisci_8h.md#aa7bb463be840666d87a68c1e65496b19)
- tisci\_cmd\_dev\_is\_stop() : [tisci.h](tisci_8h.md#a1a441bdad9bfef9a0136f0b737c9c7aa)
- tisci\_cmd\_dev\_is\_trans() : [tisci.h](tisci_8h.md#a4a3b7acb3098f71b2a9f85fbb318d595)
- tisci\_cmd\_dev\_is\_valid() : [tisci.h](tisci_8h.md#a4f4072f951c0ebbeb75e8cd2f06b6e8f)
- tisci\_cmd\_get\_clock() : [tisci.h](tisci_8h.md#ab63106de04e579ba18f34763b3efa8b3)
- tisci\_cmd\_get\_clock\_state() : [tisci.h](tisci_8h.md#a3f8128fa6c8c6f10bb7e302e6e9cfeaf)
- tisci\_cmd\_get\_device() : [tisci.h](tisci_8h.md#a4011bbe29370fb581ab2dd0fcaa151db)
- tisci\_cmd\_get\_device\_exclusive() : [tisci.h](tisci_8h.md#adc16227f1ec150d0c6cf32442fa3e915)
- tisci\_cmd\_get\_device\_resets() : [tisci.h](tisci_8h.md#a90613df222309651abc1adb2f4d82272)
- tisci\_cmd\_get\_fwl\_region() : [tisci.h](tisci_8h.md#aafb0c859914130228e6c229725f87eca)
- tisci\_cmd\_get\_proc\_boot\_status() : [tisci.h](tisci_8h.md#a9e057dd13353ccdd7df3b2263ef22940)
- tisci\_cmd\_get\_resource\_range() : [tisci.h](tisci_8h.md#ae249d114c60b6b1a76f7de8dab5c3ce1)
- tisci\_cmd\_get\_resource\_range\_from\_shost() : [tisci.h](tisci_8h.md#aa261b08c9141360c5f4f9e50ab151ed5)
- tisci\_cmd\_get\_revision() : [tisci.h](tisci_8h.md#aea0b9addbd3cfcb2be691f0801128fe1)
- tisci\_cmd\_idle\_clock() : [tisci.h](tisci_8h.md#a3d39780a18358066ec8f187474c18f71)
- tisci\_cmd\_idle\_device() : [tisci.h](tisci_8h.md#ab8203c5d0b699ec726a889e7027ae034)
- tisci\_cmd\_idle\_device\_exclusive() : [tisci.h](tisci_8h.md#aab1720913f75a771e041e2195b9deede)
- tisci\_cmd\_proc\_auth\_boot\_image() : [tisci.h](tisci_8h.md#aaa3b1c5f5072b40e2eb1c626cb6f6f29)
- tisci\_cmd\_proc\_handover() : [tisci.h](tisci_8h.md#a1acfab0f8fd3b1db050f97aa21d26ce3)
- tisci\_cmd\_proc\_release() : [tisci.h](tisci_8h.md#a2e0e3e88c635a4e6399941696056b8a9)
- tisci\_cmd\_proc\_request() : [tisci.h](tisci_8h.md#a3181b68860761b0060048a01d71888a8)
- tisci\_cmd\_proc\_shutdown\_no\_wait() : [tisci.h](tisci_8h.md#a9a80ade10fb08159e3fdfbd85ac8dfbf)
- tisci\_cmd\_put\_clock() : [tisci.h](tisci_8h.md#ae48c6c78db3f4bee6520c0af66e37e7d)
- tisci\_cmd\_put\_device() : [tisci.h](tisci_8h.md#a5a7c9ff34ad1ffa87c62fef6b2ac8719)
- tisci\_cmd\_query\_msmc() : [tisci.h](tisci_8h.md#a01625817d1a222c2979443413c7d712c)
- tisci\_cmd\_ring\_config() : [tisci.h](tisci_8h.md#a9110e6b0fd37057ea72c64c8c2067a21)
- tisci\_cmd\_rm\_irq\_release() : [tisci.h](tisci_8h.md#ac30ac2d3539999418f8b200e7b78d259)
- tisci\_cmd\_rm\_irq\_set() : [tisci.h](tisci_8h.md#a0d5c1b5afc2842e38de56c64c62f17fd)
- tisci\_cmd\_rm\_psil\_pair() : [tisci.h](tisci_8h.md#a64b6aa840b820beed84fc9a21ffde350)
- tisci\_cmd\_rm\_psil\_unpair() : [tisci.h](tisci_8h.md#a61d3ce5732bbd5a25d5d63af5a059666)
- tisci\_cmd\_rm\_udmap\_rx\_ch\_cfg() : [tisci.h](tisci_8h.md#a5217423ca42a90a472777a907864128e)
- tisci\_cmd\_rm\_udmap\_tx\_ch\_cfg() : [tisci.h](tisci_8h.md#a98a90edf1033e5146c51da785ee29581)
- tisci\_cmd\_set\_device\_resets() : [tisci.h](tisci_8h.md#a94f43ead8c81320f651fa9c0450a2493)
- tisci\_cmd\_set\_fwl\_region() : [tisci.h](tisci_8h.md#a2a1873dd1b47f7437cfd8adbea2decab)
- tisci\_cmd\_set\_proc\_boot\_cfg() : [tisci.h](tisci_8h.md#a3551276e98c3f03ea4beb9086c3b89c3)
- tisci\_cmd\_set\_proc\_boot\_ctrl() : [tisci.h](tisci_8h.md#aee60c2eb75e6786b91d9dc73c7a7e2c6)
- tisci\_cmd\_sys\_reset() : [tisci.h](tisci_8h.md#aa7b6bef27ce24be4762d28499197a8bd)
- tisci\_get\_device\_state() : [tisci.h](tisci_8h.md#ada78c57b3cb24e57a3f6cc155e3a3d09)
- tisci\_get\_resource\_range() : [tisci.h](tisci_8h.md#a8ced32499c14aae81994368d4450422d)
- tisci\_proc\_wait\_boot\_status\_no\_wait() : [tisci.h](tisci_8h.md#a8a29455ba732efa082c1a72922f46f9e)
- tisci\_set\_clock\_state() : [tisci.h](tisci_8h.md#a086d96bed3d789bf303f56405a791aa6)
- tisci\_set\_device\_state() : [tisci.h](tisci_8h.md#a8b6d6f99df32eeba9131ce130ee4f12d)
- tisci\_set\_device\_state\_no\_wait() : [tisci.h](tisci_8h.md#a05f871388f68d9c71620ea43bde1e3ab)
- tlc5971\_set\_global\_brightness() : [tlc5971.h](tlc5971_8h.md#acc0ab1f6ae658de98d043e49291abea4)
- tle9104\_clear\_diagnostics() : [tle9104.h](mfd_2tle9104_8h.md#a1c4925c222bbdd94c0fe1eb295244ec3)
- tle9104\_get\_diagnostics() : [tle9104.h](mfd_2tle9104_8h.md#a3fbd8b8e3cdf6998990d055a6e503361)
- tle9104\_write\_state() : [tle9104.h](mfd_2tle9104_8h.md#a5febfb7f1b4fd5859bf503e9ff4c2ed4)
- tls\_credential\_add() : [tls\_credentials.h](group__tls__credentials.md#ga640ff6dd3eb4d5017feaab6fab2bb2f7)
- tls\_credential\_delete() : [tls\_credentials.h](group__tls__credentials.md#ga9d8b47a7a2675fb3b3c6ee346e925aca)
- tls\_credential\_get() : [tls\_credentials.h](group__tls__credentials.md#gac3ac4ca887faf6c1f2ae60c6a08f8795)
- tmc50xx\_stepper\_set\_max\_velocity() : [stepper\_trinamic.h](group__trinamic__stepper__interface.md#gac2c7168e3618951b65df3257553260f6)
- tmc50xx\_stepper\_set\_ramp() : [stepper\_trinamic.h](group__trinamic__stepper__interface.md#ga9c186c3a7e094dce76ace821abcc9e86)
- tmp11x\_eeprom\_read() : [tmp11x.h](drivers_2sensor_2tmp11x_8h.md#ae08f7c30e516b4b8f36a6ad1883830cf)
- tmp11x\_eeprom\_write() : [tmp11x.h](drivers_2sensor_2tmp11x_8h.md#abc253a269051ae0aeec8061a050922c9)
- tolower() : [ctype.h](ctype_8h.md#ab5088a2e14096e665c030d72508e2e9d)
- TOOLCHAIN\_DISABLE\_WARNING() : [signal.h](include_2zephyr_2posix_2signal_8h.md#a36954d8c880465d4396c26ca38a69dc0)
- TOOLCHAIN\_ENABLE\_WARNING() : [signal.h](include_2zephyr_2posix_2signal_8h.md#a18706c8aebf5582117b552c12925e54d)
- toupper() : [ctype.h](ctype_8h.md#abfe63aca83a67be16cf7b8636260b018)
- tracing\_format\_data() : [tracing\_format.h](group__subsys__tracing__format__apis.md#ga4072def87e770f60de40062617e96256)
- tracing\_format\_raw\_data() : [tracing\_format.h](group__subsys__tracing__format__apis.md#gadb864c39916bc50bad341964fead14f5)
- tracing\_format\_string() : [tracing\_format.h](group__subsys__tracing__format__apis.md#gaf372e7223a7be6f938cd6a0263815d44)
- tty\_init() : [tty.h](console_2tty_8h.md#a5a880bb61f0bdb0f37c501acc0408d32)
- tty\_read() : [tty.h](console_2tty_8h.md#a90ec3fbbe5f0fad19361d23e821c960c)
- tty\_set\_rx\_buf() : [tty.h](console_2tty_8h.md#ad05b854f19b3bd97e2635bc8ebc07ce2)
- tty\_set\_rx\_timeout() : [tty.h](console_2tty_8h.md#a109fd8ee6b581a796d67025a0e33abde)
- tty\_set\_tx\_buf() : [tty.h](console_2tty_8h.md#af6383a47f82797af9a45bc81d84de1be)
- tty\_set\_tx\_timeout() : [tty.h](console_2tty_8h.md#a1c19c6ed8207ae711e047f9ae446e399)
- tty\_write() : [tty.h](console_2tty_8h.md#af60d8a57ac3cb81a0a003a011a0f31e5)
- TYPE\_SECTION\_END\_EXTERN() : [log\_core.h](log__core_8h.md#a9c76801a0e4d03e64c025f7cd5695d77)
- TYPE\_SECTION\_START\_EXTERN() : [log\_core.h](log__core_8h.md#a8bddbf82fcd014a2b65b53d80312237d), [log\_frontend\_stmesp.h](log__frontend__stmesp_8h.md#a135d13f257ea7bc2a2993d735cede654)

- Generated on  for Zephyr API Documentation by [![doxygen](doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
